updated file issue

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     </nav>
     <div class="person-image">
         <div class="person-text">
-            <h1 style="font-size: 50px;">Elise Stawarski</h1>
+            <h1 style="font-size: 50px;">Elise S</h1>
             <p>Python Programmer</p>
         </div>
     </div>
