added css format

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
     </div>
     <main>
-        <div>
-            <article>
+        <div id="main">
+            <article class="main-articles">
                 <h1>Title A</h1>
                 <strong><small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quibusdam quasi, necessitatibus vel animi nulla repudiandae saepe eaque officia maxime vero. Facilis numquam quae expedita tempora eveniet exercitationem, velit possimus.</small></strong>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt, assumenda debitis sequi ut temporibus repudiandae esse eveniet unde cupiditate veritatis fugit, tempore a rem consequuntur saepe recusandae nam laudantium.
@@ -37,7 +37,7 @@
                 Reiciendis perferendis magnam libero amet tempora commodi quas eum tenetur, eveniet quae molestias doloribus sapiente adipisci harum. Perspiciatis asperiores tempore, accusamus ad, excepturi optio at sint et sed eum error.
                 Magni veniam vitae deleniti? Aut vel excepturi, ratione quis nemo, possimus amet architecto sit delectus similique consequatur natus quibusdam cum ullam nisi error ea fugiat porro doloribus est cupiditate repellat.</p>
             </article>
-            <article>
+            <article class="main-articles">
                 <h1>Title B</h1>
                 <strong><small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quibusdam quasi, necessitatibus vel animi nulla repudiandae saepe eaque officia maxime vero. Facilis numquam quae expedita tempora eveniet exercitationem, velit possimus.</small></strong>
                 <figure>
@@ -53,7 +53,7 @@
                 Reiciendis perferendis magnam libero amet tempora commodi quas eum tenetur, eveniet quae molestias doloribus sapiente adipisci harum. Perspiciatis asperiores tempore, accusamus ad, excepturi optio at sint et sed eum error.
                 Magni veniam vitae deleniti? Aut vel excepturi, ratione quis nemo, possimus amet architecto sit delectus similique consequatur natus quibusdam cum ullam nisi error ea fugiat porro doloribus est cupiditate repellat.</p>
             </article>
-            <article>
+            <article class="main-articles">
                 <h1>Title C</h1>
                 <strong><small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quibusdam quasi, necessitatibus vel animi nulla repudiandae saepe eaque officia maxime vero. Facilis numquam quae expedita tempora eveniet exercitationem, velit possimus.</small></strong>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt, assumenda debitis sequi ut temporibus repudiandae esse eveniet unde cupiditate veritatis fugit, tempore a rem consequuntur saepe recusandae nam laudantium.
@@ -66,10 +66,10 @@
                 Magni veniam vitae deleniti? Aut vel excepturi, ratione quis nemo, possimus amet architecto sit delectus similique consequatur natus quibusdam cum ullam nisi error ea fugiat porro doloribus est cupiditate repellat.</p>
             </article>
         </div>
-        <div>
-            <article>
-                <img src="images\elise.jpeg">
-                <div>
+        <div id="side">
+            <article class="side-articles" id="profile">
+                <img id="profile-image" src="images\elise.jpeg">
+                <div id="profile-details">
                     <h2>Elise Stawarski</h2>
                     <ul>
                         <li>123 Faux St</li>
@@ -80,7 +80,7 @@
                 </div>    
             </article>
         
-            <article>
+            <article class="side-articles">
                 <h1>Title D</h1>
                 <strong><small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quibusdam quasi, necessitatibus vel animi nulla repudiandae saepe eaque officia maxime vero. Facilis numquam quae expedita tempora eveniet exercitationem, velit possimus.</small></strong>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt, assumenda debitis sequi ut temporibus repudiandae esse eveniet unde cupiditate veritatis fugit, tempore a rem consequuntur saepe recusandae nam laudantium.
@@ -92,7 +92,7 @@
                 Reiciendis perferendis magnam libero amet tempora commodi quas eum tenetur, eveniet quae molestias doloribus sapiente adipisci harum. Perspiciatis asperiores tempore, accusamus ad, excepturi optio at sint et sed eum error.
                 Magni veniam vitae deleniti? Aut vel excepturi, ratione quis nemo, possimus amet architecto sit delectus similique consequatur natus quibusdam cum ullam nisi error ea fugiat porro doloribus est cupiditate repellat.</p>
             </article>
-            <article>
+            <article class="side-articles">
                 <h1>Contact Me</h1>
                 <strong><small>Please contact me with questions
                 </small></strong>
