--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                 <label for="body"><strong>Message</strong></label>
                 <br>
                 <textarea id="body" placeholder="Your Message" rows="5"></textarea>
+                <br>
+                <button type="submit">submit</button>
                 </form>
             </article>
         </div>
