added images and content

--- a/index.html
+++ b/index.html
@@ -27,22 +27,21 @@
         <div id="main">
             <article class="main-articles">
                 <h1>Title A</h1>
-                <strong><small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quibusdam quasi, necessitatibus vel animi nulla repudiandae saepe eaque officia maxime vero. Facilis numquam quae expedita tempora eveniet exercitationem, velit possimus.</small></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt, assumenda debitis sequi ut temporibus repudiandae esse eveniet unde cupiditate veritatis fugit, tempore a rem consequuntur saepe recusandae nam laudantium.
-                Provident sapiente doloribus minus exercitationem magnam quas ipsum ipsa pariatur placeat labore alias sequi accusamus, vitae delectus quos ab, earum incidunt. Beatae voluptate debitis eligendi ipsum aspernatur vero ullam voluptatem.
-                Eum perferendis voluptatibus sit at iusto expedita! Quam nostrum, aut libero officiis beatae explicabo ea sint! Repellendus itaque enim, nisi perferendis aliquam quo, tempore cum minus iusto delectus voluptates labore!
-                Ratione eum corporis fugiat, natus voluptatum eligendi facilis error molestiae qui. Unde recusandae sed, reprehenderit eum quod error sit optio animi quasi veritatis quae, voluptatum molestias libero ullam magnam necessitatibus?
-                Esse eligendi in molestiae minus placeat perspiciatis doloribus saepe, blanditiis quo quae, qui ab assumenda ipsam nulla quos non vero neque excepturi quibusdam et, modi ducimus. Reiciendis consequuntur odit libero?
-                Ipsa quis, iste, eveniet ab optio minima harum et, fugit nobis eum sed dolorum odit itaque error. Assumenda aut sed, doloremque quod, illum nemo voluptate, ut quis veritatis hic omnis.
-                Reiciendis perferendis magnam libero amet tempora commodi quas eum tenetur, eveniet quae molestias doloribus sapiente adipisci harum. Perspiciatis asperiores tempore, accusamus ad, excepturi optio at sint et sed eum error.
-                Magni veniam vitae deleniti? Aut vel excepturi, ratione quis nemo, possimus amet architecto sit delectus similique consequatur natus quibusdam cum ullam nisi error ea fugiat porro doloribus est cupiditate repellat.</p>
+                <h1>About me</h1>
+                <strong><small> 
+                My dream job is to be a Front End Web Developer. After graduating high school in 2007, I moved to England where I earned my Bachelor's Degree in Forensic Science in 2015. After working at an engine oil additive company until 2019, I moved back home to Illinois.</small></strong>
+
+                <p>My first experience with web development was in 2003, when I learned how to use HTML and CSS in order to customize my Neopets shop. After that, I learned how to edit my MySpace page. I really loved coding at the time, but ended up going into the Forensic Science field and earning my degree in it. 
+                <br>
+                <br>
+                After working for 4 years in a laboratory, I realized it isn't what I wanted to do for the rest of my life. After moving back to Illinois, I took on a couple different positions trying to find myself, and during my free time, rediscovered my love for coding. During lockdown, I spent my free time learning C#, HTML, and CSS. I became determined to learn even more and wanted pursue a career in coding, so I took the opportunity to enroll in Coding Temple.</p>
             </article>
             <article class="main-articles">
                 <h1>Title B</h1>
                 <strong><small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quibusdam quasi, necessitatibus vel animi nulla repudiandae saepe eaque officia maxime vero. Facilis numquam quae expedita tempora eveniet exercitationem, velit possimus.</small></strong>
                 <figure>
-                    <img src="http://via.placeholder.com/400x200">
-                    <figcaption><em>I love the view</em></figcaption>
+                    <img class="img" src="images/rlm.png">
+                    <figcaption><em>So this is what you've donewith your life</em></figcaption>
                 </figure>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt, assumenda debitis sequi ut temporibus repudiandae esse eveniet unde cupiditate veritatis fugit, tempore a rem consequuntur saepe recusandae nam laudantium.
                 Provident sapiente doloribus minus exercitationem magnam quas ipsum ipsa pariatur placeat labore alias sequi accusamus, vitae delectus quos ab, earum incidunt. Beatae voluptate debitis eligendi ipsum aspernatur vero ullam voluptatem.
