--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <main>
         <div id="main">
             <article class="main-articles">
-                <h1>Title A</h1>
                 <h1>About me</h1>
                 <strong><small> 
                 My dream job is to be a Front End Web Developer. After graduating high school in 2007, I moved to England where I earned my Bachelor's Degree in Forensic Science in 2015. After working at an engine oil additive company until 2019, I moved back home to Illinois.</small></strong>
@@ -37,13 +36,13 @@
                 After working for 4 years in a laboratory, I realized it isn't what I wanted to do for the rest of my life. After moving back to Illinois, I took on a couple different positions trying to find myself, and during my free time, rediscovered my love for coding. During lockdown, I spent my free time learning C#, HTML, and CSS. I became determined to learn even more and wanted pursue a career in coding, so I took the opportunity to enroll in Coding Temple.</p>
             </article>
             <article class="main-articles">
-                <h1>Title B</h1>
-                <strong><small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quibusdam quasi, necessitatibus vel animi nulla repudiandae saepe eaque officia maxime vero. Facilis numquam quae expedita tempora eveniet exercitationem, velit possimus.</small></strong>
+                <h1>My hobbies</h1>
+                <strong><small>In my free time, I like to watch YouTube and Netflix. I spend my time taking care of plants, cats, and birds.</small></strong>
                 <figure>
                     <img class="img" src="images/rlm.png">
-                    <figcaption><em>So this is what you've donewith your life</em></figcaption>
+                    <figcaption><em>So this what you've done with your life</em></figcaption>
                 </figure>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt, assumenda debitis sequi ut temporibus repudiandae esse eveniet unde cupiditate veritatis fugit, tempore a rem consequuntur saepe recusandae nam laudantium.
+                <p>My favorite YouTube channel is Red Letter Media.
                 Provident sapiente doloribus minus exercitationem magnam quas ipsum ipsa pariatur placeat labore alias sequi accusamus, vitae delectus quos ab, earum incidunt. Beatae voluptate debitis eligendi ipsum aspernatur vero ullam voluptatem.
                 Eum perferendis voluptatibus sit at iusto expedita! Quam nostrum, aut libero officiis beatae explicabo ea sint! Repellendus itaque enim, nisi perferendis aliquam quo, tempore cum minus iusto delectus voluptates labore!
                 Ratione eum corporis fugiat, natus voluptatum eligendi facilis error molestiae qui. Unde recusandae sed, reprehenderit eum quod error sit optio animi quasi veritatis quae, voluptatum molestias libero ullam magnam necessitatibus?
