--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
     </div>
     <main>
         <div id="main">
+                <article class="main-articles" id="profile">
+                    <img id="profile-image" src="images\elise.jpeg">
+                    <div id="profile-details">
+                        <h2>Elise Stawarski</h2>
+                        <ul>
+                            <li>123 Faux St</li>
+                            <li>Milwaukee, WI</li>
+                            <li>(999) 555-2222</li>
+                            <li>Esta@gmail.com</li>
+                        </ul>   
+                </article>
             <article class="main-articles">
+
                 <h1>About me</h1>
                 <strong><small> 
                 My dream job is to be a Front End Web Developer. After graduating high school in 2007, I moved to England where I earned my Bachelor's Degree in Forensic Science in 2015. After working at an engine oil additive company until 2019, I moved back home to Illinois.</small></strong>
@@ -64,31 +76,13 @@
                 Magni veniam vitae deleniti? Aut vel excepturi, ratione quis nemo, possimus amet architecto sit delectus similique consequatur natus quibusdam cum ullam nisi error ea fugiat porro doloribus est cupiditate repellat.</p>
             </article>
         </div>
-        <div id="side">
-            <article class="side-articles" id="profile">
-                <img id="profile-image" src="images\elise.jpeg">
-                <div id="profile-details">
-                    <h2>Elise Stawarski</h2>
-                    <ul>
-                        <li>123 Faux St</li>
-                        <li>Milwaukee, WI</li>
-                        <li>(999) 555-2222</li>
-                        <li>Esta@gmail.com</li>
-                    </ul>
-                </div>    
-            </article>
         
             <article class="side-articles">
                 <h1>Title D</h1>
                 <strong><small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quibusdam quasi, necessitatibus vel animi nulla repudiandae saepe eaque officia maxime vero. Facilis numquam quae expedita tempora eveniet exercitationem, velit possimus.</small></strong>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt, assumenda debitis sequi ut temporibus repudiandae esse eveniet unde cupiditate veritatis fugit, tempore a rem consequuntur saepe recusandae nam laudantium.
                 Provident sapiente doloribus minus exercitationem magnam quas ipsum ipsa pariatur placeat labore alias sequi accusamus, vitae delectus quos ab, earum incidunt. Beatae voluptate debitis eligendi ipsum aspernatur vero ullam voluptatem.
-                Eum perferendis voluptatibus sit at iusto expedita! Quam nostrum, aut libero officiis beatae explicabo ea sint! Repellendus itaque enim, nisi perferendis aliquam quo, tempore cum minus iusto delectus voluptates labore!
-                Ratione eum corporis fugiat, natus voluptatum eligendi facilis error molestiae qui. Unde recusandae sed, reprehenderit eum quod error sit optio animi quasi veritatis quae, voluptatum molestias libero ullam magnam necessitatibus?
-                Esse eligendi in molestiae minus placeat perspiciatis doloribus saepe, blanditiis quo quae, qui ab assumenda ipsam nulla quos non vero neque excepturi quibusdam et, modi ducimus. Reiciendis consequuntur odit libero?
-                Ipsa quis, iste, eveniet ab optio minima harum et, fugit nobis eum sed dolorum odit itaque error. Assumenda aut sed, doloremque quod, illum nemo voluptate, ut quis veritatis hic omnis.
-                Reiciendis perferendis magnam libero amet tempora commodi quas eum tenetur, eveniet quae molestias doloribus sapiente adipisci harum. Perspiciatis asperiores tempore, accusamus ad, excepturi optio at sint et sed eum error.
-                Magni veniam vitae deleniti? Aut vel excepturi, ratione quis nemo, possimus amet architecto sit delectus similique consequatur natus quibusdam cum ullam nisi error ea fugiat porro doloribus est cupiditate repellat.</p>
+                Eum perferendis voluptatibus sit at iusto expedita! Quam nostrum, aut libero officiis beatae explicabo ea sint! Repellendus itaque enim, nisi perferendis aliquam quo, tempore cum minus iusto delectus voluptates labore!</p>
             </article>
             <article class="side-articles">
                 <h1>Contact Me</h1>
