moved profile profile box to top

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <main>
         <div id="main">
-                <article class="main-articles" id="profile">
+                <article class="profile-article" id="profile">
                     <img id="profile-image" src="images\elise.jpeg">
                     <div id="profile-details">
                         <h2>Elise Stawarski</h2>
