--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li>My Portfolio</li>
-            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Scotland Adventure</a></li>
             <li><a href="http://www.google.com">Link 2</a></li>
             <li><a href="page3.html">Link 3</a></li>
             <li><a href="#">Link 4</a></li>
