--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <article class="profile-article" id="profile">
                     <img id="profile-image" src="images\elise.jpeg">
                     <div id="profile-details">
-                        <h2>Elise Stawarski</h2>
+                       <h2>Elise Stawarski</h2>
                         <ul>
                             <li>123 Faux St</li>
-                            <li>Milwaukee, WI</li>
+                            <li>Chicago, IL</li>
                             <li>(999) 555-2222</li>
                             <li>Esta@gmail.com</li>
                         </ul>   
