added hyperlink to fb

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li>My Portfolio</li>
             <li><a href="#">Scotland Adventure</a></li>
-            <li><a href="http://www.google.com">Link 2</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100081354322855" target="_blank">My Facebook Page</a></li>
             <li><a href="page3.html">Link 3</a></li>
             <li><a href="#">Link 4</a></li>
         </ul>
