--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             </article>
             <article class="main-articles">
                 <h1>My hobbies</h1>
-                <strong><small>In my free time, I like to watch YouTube and Netflix. I spend my time taking care of plants, drinking an absurb amount of coffee, and gardening. </small></strong>
+                <strong><small>In my free time, I like to watch YouTube and Netflix. I spend my time taking care of plants, drinking an absurd amount of coffee, and gardening. </small></strong>
                 <figure>
                     <img class="img" src="images/rlm.png">
                     <figcaption><em>So this what you've done with your life</em></figcaption>
                 </figure>
-                <p>My favorite YouTube Channel to watch is <a href="https://www.youtube.com/user/RedLetterMedia">Red Letter Media</a> It's basically just a bunch of guys who review tv shows and movies that they've seen. They have a couple difference series that they do including: 'Best of the Worst', 'Half In the Bag', and 're:View'. <br>
+                <p>My favorite YouTube Channel to watch is <a href="https://www.youtube.com/user/RedLetterMedia">Red Letter Media</a> It's basically just a bunch of guys who review tv shows and movies that they've seen. They have a couple different series that they do including: 'Best of the Worst', 'Half In the Bag', and 're:View'. <br>
 
                 <br>
                 I recently got into gardening, and love taking care of plants. I find it very therapeutic. The other day I planted some basil, so once it grows I plan on making a nice caprese salad with it. But, alas! I am impatient, so it's hard for me to be waiting a long time for it. 
@@ -75,15 +75,8 @@
 
             <article class="main-articles">
                 <h1>My cockatiel</h1>
-                <strong><small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quibusdam quasi, necessitatibus vel animi nulla repudiandae saepe eaque officia maxime vero. Facilis numquam quae expedita tempora eveniet exercitationem, velit possimus.</small></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt, assumenda debitis sequi ut temporibus repudiandae esse eveniet unde cupiditate veritatis fugit, tempore a rem consequuntur saepe recusandae nam laudantium.
-                Provident sapiente doloribus minus exercitationem magnam quas ipsum ipsa pariatur placeat labore alias sequi accusamus, vitae delectus quos ab, earum incidunt. Beatae voluptate debitis eligendi ipsum aspernatur vero ullam voluptatem.
-                Eum perferendis voluptatibus sit at iusto expedita! Quam nostrum, aut libero officiis beatae explicabo ea sint! Repellendus itaque enim, nisi perferendis aliquam quo, tempore cum minus iusto delectus voluptates labore!
-                Ratione eum corporis fugiat, natus voluptatum eligendi facilis error molestiae qui. Unde recusandae sed, reprehenderit eum quod error sit optio animi quasi veritatis quae, voluptatum molestias libero ullam magnam necessitatibus?
-                Esse eligendi in molestiae minus placeat perspiciatis doloribus saepe, blanditiis quo quae, qui ab assumenda ipsam nulla quos non vero neque excepturi quibusdam et, modi ducimus. Reiciendis consequuntur odit libero?
-                Ipsa quis, iste, eveniet ab optio minima harum et, fugit nobis eum sed dolorum odit itaque error. Assumenda aut sed, doloremque quod, illum nemo voluptate, ut quis veritatis hic omnis.
-                Reiciendis perferendis magnam libero amet tempora commodi quas eum tenetur, eveniet quae molestias doloribus sapiente adipisci harum. Perspiciatis asperiores tempore, accusamus ad, excepturi optio at sint et sed eum error.
-                Magni veniam vitae deleniti? Aut vel excepturi, ratione quis nemo, possimus amet architecto sit delectus similique consequatur natus quibusdam cum ullam nisi error ea fugiat porro doloribus est cupiditate repellat.</p>
+                <strong><small>I have a cockatiel who is almost 3 years old, she means the world to me!</small></strong>
+                <p>My cockatie's name is Peanut. Her original name was Princess Buttercup, but over time it got shortened and changed to Peanut. Her favorite activities include eating millet, chewing on objects she can find, and chirping at other birds out the window. She also enjoys begging for scratches. </p>
             </article>
         </div>
         
