added background img for webpage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="person-image">
         <div class="person-text">
             <h1 style="font-size: 50px;">Elise S</h1>
-            <p>Python Programmer</p>
+            <p>Python Programmer and Web Developer</p>
         </div>
     </div>
     <main>
@@ -84,7 +84,7 @@
                 <strong><small>I have been playing video games since I was about six years old. My favorites include Tomb Raider, Animal Crossing, and Oblivion. </small></strong>
                 <p>My most favorite game of all time is Tomb Raider. I grew up playing games  that my dad would buy. After my dad picked up Tomb Raider at Target in the 90s, I soon became a fan!
                 <figure> <img class="img" src="images/tombraider.jpeg"> <figcaption><em>Tomb Raider, 1996 </em></figcaption></figure>
-                I loved the game so much I played almost every single one in the series. In 2016, there was a Anniversary event that occured at the Quad in Derby, England. I was living in Derby, England at that time and got to attend. It was awesome! I got to speak to the creators of the series and got to ask a couple of questions. Also, I didn't know after after I had moved to Derby, that Core Design, the company who made it, had been located down the road from where I lived! I also have a nice collection of Tomb Raider, and I even got a tattoo of Lara Croft!</p>
+                I loved the game so much I played almost every single one in the series. In 2016, there was a Anniversary event that occured at the Quad in Derby, England. I was living in Derby, England at that time and got to attend. It was awesome! I got to speak to the creators of the series and got to ask a couple of questions. Also, I didn't know after after I had moved to Derby, that Core Design, the company who made it, had been located down the road from where I lived! I also have a nice collection of Tomb Raider stuff, and I even got a tattoo of Lara Croft!</p>
             </article>
         </div>
         
@@ -101,7 +101,7 @@
                 <br>
                 <label for="body"><strong> Favorite Meme</strong></label>
                 <br>
-                <textarea id="body" placeholder="Your Message" rows="5"></textarea>
+                <textarea id="body" placeholder="Your Meme Here Please" rows="5"></textarea>
                 <br>
                 <button type="submit">submit</button>
                 </form>
@@ -111,7 +111,7 @@
     <footer>
         <hr>
         <div>
-            &copy Elise Stawarski 2022  &nbsp;
+            <em>&copy Elise Stawarski 2022 &nbsp; </em>
         </div>
     </footer>
 
