did stuff, hope it doesn't mess up

--- a/index1.html
+++ b/index1.html
@@ -8,6 +8,46 @@
     <title>Scotland Adventure 2019</title>
 </head>
 <body>
-    Index1
+    <nav>
+        <ul>
+            <li>Scotland 2019</li>
+            <li><a href="index.html">My Portfolio</a></li>
+            <li><a href="index1.html">Scotland Adventure</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100081354322855" target="_blank">My Facebook Page</a></li>
+        </ul>
+    </nav>
+    <div class="person-image">
+        <div class="person-text">
+            <h1 style="font-size: 50px;">Trip to Scotland</h1>
+            <p>March 2019</p>
+        </div>
+    </div>
+    <main>
+        <div id="main1">
+            <article class="main-articles">
+
+                <h1>About me</h1>
+                <strong><small> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga amet similique recusandae suscipit sint expedita voluptatum harum quod deleniti enim saepe doloribus distinctio autem tempora totam dolore dolorem, repellendus eaque.
+                Non, totam laborum ullam,</small></strong>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus impedit dignissimos iure obcaecati repellat accusamus, ab expedita eligendi doloribus nesciunt praesentium explicabo possimus soluta error consequuntur quisquam molestias! Voluptatem, reprehenderit?
+                Reprehenderit dolor quisquam velit nihil hic. Laborum aut fuga dolorum voluptas, quis aliquid maiores a perspiciatis magnam labore placeat suscipit omnis, quas velit. Nulla maiores sapiente totam facere, quo nihil.
+                Ad sed quaerat, soluta iste illo eveniet error officia a cum repellendus nisi blanditiis minima aliquam, enim quasi! Aliquam, aut quod? Voluptatibus, repellat officiis. Enim fugiat esse nam voluptas iusto.
+                <br>
+                <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dolorem, cupiditate architecto fuga in quam ullam repudiandae eos voluptate quidem, libero vero sunt non, tempore numquam harum obcaecati officia. Neque.
+                Voluptatem, vero adipisci numquam ab obcaecati magni. Saepe similique nam quasi quaerat dicta amet eius rerum culpa deleniti animi dolorem quod architecto sed praesentium laborum, voluptatibus doloremque quae earum obcaecati!</p>
+            </article>
+        </div>
+    </main>
+    <footer>
+        <hr>
+        <div>
+            <em>&copy Elise Stawarski 2022 &nbsp; </em>
+        </div>
+    </footer>
+
 </body>
+
 </html>
