added photos and some text

--- a/index1.html
+++ b/index1.html
@@ -28,16 +28,46 @@
 
                 <h1>About me</h1>
                 <strong><small> 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga amet similique recusandae suscipit sint expedita voluptatum harum quod deleniti enim saepe doloribus distinctio autem tempora totam dolore dolorem, repellendus eaque.
-                Non, totam laborum ullam,</small></strong>
+                In March 2019, I visited Edinborough, Scotland. It was amazing! But rainy, and cold.</small></strong>
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus impedit dignissimos iure obcaecati repellat accusamus, ab expedita eligendi doloribus nesciunt praesentium explicabo possimus soluta error consequuntur quisquam molestias! Voluptatem, reprehenderit?
-                Reprehenderit dolor quisquam velit nihil hic. Laborum aut fuga dolorum voluptas, quis aliquid maiores a perspiciatis magnam labore placeat suscipit omnis, quas velit. Nulla maiores sapiente totam facere, quo nihil.
-                Ad sed quaerat, soluta iste illo eveniet error officia a cum repellendus nisi blanditiis minima aliquam, enim quasi! Aliquam, aut quod? Voluptatibus, repellat officiis. Enim fugiat esse nam voluptas iusto.
+                <figure>
+                    <img class="img" src="images/rlm.png">
+                    <figcaption><em>So this what you've done with your life</em></figcaption>
+                </figure>
+
+                Reprehenderit dolor quisquam velit nihil hic. Laborum aut fuga dolorum voluptas, quis aliquid maiores a perspiciatis magnam labore placeat suscipit omnis, quas velit. Nulla maiores sapiente <figure>
+                <img class="img" src="images/rlm.png">
+                <figcaption><em>So this what you've done with your life</em></figcaption>
+                </figure> 
                 <br>
                 <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dolorem, cupiditate architecto fuga in quam ullam repudiandae eos voluptate quidem, libero vero sunt non, tempore numquam harum obcaecati officia. Neque.
-                Voluptatem, vero adipisci numquam ab obcaecati magni. Saepe similique nam quasi quaerat dicta amet eius rerum culpa deleniti animi dolorem quod architecto sed praesentium laborum, voluptatibus doloremque quae earum obcaecati!</p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dolorem, <figure>
+                    <img class="img" src="images/rlm.png">
+                    <figcaption><em>So this what you've done with your life</em></figcaption>
+                </figure>
+                
+                cupiditate architecto fuga in quam ullam repudiandae eos voluptate quidem, libero vero sunt non, tempore numquam harum obcaecati officia. Neque.
+                Voluptatem, vero adipisci numquam ab obcaecati magni. <figure>
+                <img class="img" src="images/rlm.png">
+                <figcaption><em>So this what you've done with your life</em></figcaption>
+                </figure>
+                Saepe similique nam quasi quaerat dicta amet eius rerum culpa deleniti animi dolorem quod architecto sed praesentium laborum,
+                <figure>
+                <img class="img" src="images/rlm.png">
+                <figcaption><em>So this what you've done with your life</em></figcaption>
+                </figure>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, iure officia facilis perspiciatis maxime ipsa rem ducimus, fugiat repellat voluptates vel, accusantium voluptatum asperiores. Sit necessitatibus quas ipsum velit asperiores?
+                <figure>
+                <img class="img" src="images/rlm.png">
+                <figcaption><em>So this what you've done with your life</em></figcaption>
+                </figure>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias vitae corrupti facilis, laborum accusamus incidunt aut odio aliquid inventore quis sunt architecto consequuntur deserunt at dolor repudiandae, sit neque! Praesentium.
+                <figure>
+                <img class="img" src="images/rlm.png">
+                <figcaption><em>So this what you've done with your life</em></figcaption>
+                </figure>
+                voluptatibus doloremque quae earum obcaecati!</p>
             </article>
         </div>
     </main>
