--- a/index1.html
+++ b/index1.html
@@ -28,7 +28,7 @@
 
                 <h1>About me</h1>
                 <strong><small> 
-                In March 2019, I visited Edinburgh, Scotland. It was amazing! But rainy, and cold.</small></strong>
+                In March 2019, I visited Edinburgh, Scotland for two days. It was amazing! But rainy, and cold.</small></strong>
                 <p>I took the train from Derby, England all the way to Edinburgh, Scotland. It took over 4 hours, but was worth the trip! The scenery was really nice, but I couldn't wait to get off of the train and walk around. 
                 <figure>
                 <img class="img" src="images2/mainroad.jpg">
@@ -74,7 +74,7 @@
                 <img class="img" src="images2/viewfrominsidecastle.jpg">
                 <figcaption><em>This was a photo from the interior of the castle. </em></figcaption>
                 </figure>
-                Edinburgh Castle is where Mary Queen of Scots lived temporarily. <figure>
+                Edinburgh Castle is where Mary Queen of Scots lived temporarily around 1566.<figure>
                 <img class="img" src="images2/closeup.jpg">
                 <figcaption><em>A selfie I took, too close up though. I can't remember where I took this photo though.</em></figcaption>
                 </figure>
