--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
         <div id="main1">
             <article class="main-articles">
 
-                <h1>About me</h1>
+                <h1>About my Adventure</h1>
                 <strong><small> 
                 In March 2019, I visited Edinburgh, Scotland for two days. It was amazing! But rainy, and cold.</small></strong>
                 <p>I took the train from Derby, England all the way to Edinburgh, Scotland. It took over 4 hours, but was worth the trip! The scenery was really nice, but I couldn't wait to get off of the train and walk around. 
