--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
     </nav>
     <div class="person-image">
         <div class="person-text">
-            <h1 style="font-size: 50px;">Trip to Scotland</h1>
+            <h1 style="font-size: 50px">Trip to Scotland</h1>
             <p>March 2019</p>
         </div>
     </div>
