--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
                     <div id="profile-details">
                        <h2>Elise Stawarski</h2>
                         <ul>
-                            <li>123 Faux St</li>
+                           
                             <li>Chicago, IL</li>
-                            <li>(999) 555-2222</li>
-                            <li>Esta@gmail.com</li>
+                            <li>Estawars30@gmail.com</li>
                         </ul>   
                 </article>
             <article class="main-articles">
